[package]
name = "filecoin-proofs-api"
version = "5.4.0"
description = "API to interact with the proofs system in Filecoin"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/filecoin-project/rust-filecoin-proofs-api"
readme = "README.md"

[dependencies]
anyhow = "1.0.26"
bincode = "1.1.2"
serde = "1.0.104"
filecoin-proofs-v1 = { package = "filecoin-proofs", version = "6.0.0", default-features = false, features = ["gpu"], git = "https://github.com/storswiftlabs/rust-fil-proofs.git" }
bellperson = { version = "0.12.3", default-features = false, features = ["gpu"], git = "https://github.com/storswiftlabs/bellman.git"}
filecoin-hashers = { version = "1.0.0", default-features = false, features = ["poseidon", "sha256"], git = "https://github.com/storswiftlabs/rust-fil-proofs.git" }

[features]
default = ["pairing"]
pairing = ["filecoin-proofs-v1/pairing", "bellperson/pairing"]
blst = ["filecoin-proofs-v1/blst", "bellperson/blst"]
